fix(internal/iconbutton): add invisible span with icon name

--- a/packages/internal/src/IconButton/styles.css
+++ b/packages/internal/src/IconButton/styles.css
@@ -1,4 +1,8 @@
 [data-scope='button'][data-part='root'][data-tag='icon-button'][data-style-tag='internal'] {
   font-size: 17px;
   line-height: normal;
+
+  [data-tag2='icon-name'] {
+    display: none;
+  }
 }
